3.1.9:
3.1.8: updated circleci context.
3.1.7: 
  - Fix bug after Cloudify 7 release.
  - Support for ACL deprecation in s3 buckets.
  - Fix bug in cloudformation-feature-demo blueprint
3.1.6: add __version__.py file in cloudify_aws folder.
3.1.5: RD-6735 Do not stop existing resource.
3.1.4: Update Check Drift Status
3.1.3: Add account ID property to roles in precreate.
3.1.2:
  - RD-6237 Calculated drift in non-JSON serializable format
3.1.1:
  - RD 6213 RDS provisioned in wrong vpc.
3.1.0:
 - RD 5833 DSL 1.5 Plugin YAML.
 - Handle malformed xml in s3 empty CreateBucketConfiguration.
 - updated cleanup_vpc_internet_gateways, so detaching of igw has vpc id as well.
 - ec2 resources will check that deletion will be successful using dry run before deleting tags
 - image resources check node properties instead of runtime properties
 - Add cognito.
3.0.10: Workflow availability.
3.0.9: Add Status reports in CF.
3.0.8:
 - RD-4811-SessionToken with cloudify-ecosystem-test
 - Fix resource tags.
3.0.7: Add Blueprint_ID to workflow.
3.0.6:
    - RD-4912-spot-fleet-instances-reporting Rewrite the message to be more clear
3.0.5:
    - Allow to assume role after initial authentication
3.0.4:
    - Add assume role to the client configuration
3.0.3:
    - RD-1979 Standardize use of resource_config instead of copying it to params
    - RD-4490 add poststart to spot fleet request
3.0.2:
    - RD-4434 Nics for Spot Fleet Requests
    - RD-2009 EC2 base properties improvement
    - Fix for EFS
    - Fix for ECS
3.0.1:
    - RD-3458 fix iam blueprint & iam status
3.0.0:
    - Moved all prepare to precreate and all create to prepare.
    - RD-3921 added resource tagging
2.14.1:
    - RD-3922: refactor _aws_resource decorator
    - RD-3922: updated natgateway create for new aws requirements
2.14.0:
    - RD-3880: Support check status for EKS
    - RD-3882: Support check status for EC2 Instances and Network
2.13.0:
    - RD-3635 Fix detach a disk.