@@ -479,6 +479,9 @@ def assign_subnet_param(params):
                         EXTERNAL_RESOURCE_ID)
     if subnet_id:
         params[SUBNET_ID] = subnet_id
+        if not utils.is_valid_aws_id('subnet', subnet_id):
+            ctx.logger.error('The Subnets ID {} is malformed'.format(
+                subnet_id))
 
 
 def assign_groups_param(params):
@@ -539,6 +542,9 @@ def assign_nics_param(params):
         for i in nic:
             nics[i[NIC_ID]].update(i)
             merged_nics = list(nics.values())
+            if not utils.is_valid_aws_id('eni', i[NIC_ID]):
+                ctx.logger.error('The ENI ID {} is malformed'.format(
+                    i[NIC_ID]))
     sorted_devices = sort_devices(merged_nics)
     if sorted_devices:
         params[NETWORK_INTERFACES] = sorted_devices
