@@ -146,6 +146,9 @@ def create(ctx, iface, resource_config, **_):
         # Fallback to connected VPC.
         resource_config[VPC_ID] = vpc_id or targ.target\
             .instance.runtime_properties.get(EXTERNAL_RESOURCE_ID)
+        vpc_id = resource_config[VPC_ID]
+    if not utils.is_valid_aws_id('vpc', vpc_id):
+        ctx.logger.error('The VPC ID {} is malformed'.format(vpc_id))
 
     # Actually create the resource
     create_response = iface.create(resource_config)[ROUTETABLE]
@@ -201,6 +204,9 @@ def attach(ctx, iface, resource_config, **_):
             target.target.instance.runtime_properties.get(EXTERNAL_RESOURCE_ID)
         association_id = iface.attach(resource_config).get(ASSOCIATION_ID)
         association_id_list.append(association_id)
+        if not utils.is_valid_aws_id('subnet', resource_config[SUBNET_ID]):
+            ctx.logger.error('The Subnets ID {} is malformed'.format(
+                resource_config[SUBNET_ID]))
     ctx.instance.runtime_properties['association_ids'] = \
         association_id_list
 
